# CMake-Template

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: Bank.cpp.21647CD2CDE8D3D5.idx  Bank.hpp.E5192DB2966C5C08.idx  Kunde.cpp.100EECFFAC7FE38A.idx  Kunde.hpp.0A6F18835E4FF268.idx  main.cpp.5EFAB2FB019874CA.idx
include/: Bank.hpp  Kunde.hpp
src/: Bank.cpp  Kunde.cpp  main.cpp
